// This is created by framework
// Notes:
//  - Top message is the main message structure we use, if you want to define
//     some sub-messages, write them after the top message
//  - Do not recommend to use 'requried' field, if you really want to use it,
//     make sure it be filled

syntax = "proto3";

package skull.service.ranking;

message rank_req {
    string question  = 1;
    int32  qtype     = 2; // 1: A, 2: AAAA

    repeated RankingRecord rRecord = 3;
}

message RankingRecord {
    string ip          = 1;
    int32  expiredTime = 2;
}
