// This is created by framework
// Notes:
//  - Top message is the main message structure we use, if you want to define
//     some sub-messages, write them after the top message
//  - Do not use 'requried' field

syntax = "proto3";

package skull.service.ranking;

message rank_resp {
    repeated RankingResult result = 1;
}

message RankingResult {
    string ip    = 1;
    int32  ttl   = 2;
    repeated HttpInfo http_info = 4;
}

message HttpInfo {
    int32 status   = 1;
    int32 httpCode = 2;
    int32 latency  = 3;
}
